--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="nav_header_height">192dp</dimen>
+    <dimen name="nav_header_padding">16dp</dimen>
 </resources>
