--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="nav_header_height">192dp</dimen>
     <dimen name="nav_header_padding">16dp</dimen>
+    <dimen name="floating_action_button_margin">16dp</dimen>
 </resources>
