--- a/android/app/src/main/res/layout/activity_about.xml
+++ b/android/app/src/main/res/layout/activity_about.xml
@@ -16,7 +16,7 @@
                 android:id="@+id/text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/fab_margin"
+                android:layout_margin="@dimen/info_text_margin"
                 android:textColor="#000000"/>
 
     </ScrollView>
