--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="search_bar_top_margin">32dp</dimen>
     <dimen name="round_corner_radius">8dp</dimen>
     <dimen name="menu_button_size">50dp</dimen>
+    <dimen name="info_text_margin">16dp</dimen>
 
 </resources>
