--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="round_corner_radius">8dp</dimen>
     <dimen name="menu_button_size">50dp</dimen>
     <dimen name="info_text_margin">16dp</dimen>
+    <dimen name="button_margin">8dp</dimen>
+
 
 </resources>
