--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -6,7 +6,7 @@
     <dimen name="search_bar_side_margin">8dp</dimen>
     <dimen name="search_bar_top_margin">32dp</dimen>
     <dimen name="round_corner_radius">8dp</dimen>
-    <dimen name="menu_button_size">50dp</dimen>
+    <dimen name="search_bar_button_size">50dp</dimen>
     <dimen name="info_text_margin">16dp</dimen>
     <dimen name="button_margin">8dp</dimen>
 
