--- a/android/app/src/main/res/layout/activity_main_content.xml
+++ b/android/app/src/main/res/layout/activity_main_content.xml
@@ -17,7 +17,7 @@
             android:layout_gravity="end|bottom"
             android:layout_margin="@dimen/fab_margin"
             android:id="@+id/floating_directions_button"
-            android:src="@drawable/ic_directions"
+            android:src="@drawable/ic_directions_black"
             app:backgroundTint="@color/colorPrimary"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -28,7 +28,7 @@
             android:layout_gravity="center|top"
             app:useCompatPadding="true"
             android:id="@+id/floating_location_button"
-            android:src="@drawable/ic_my_location"
+            android:src="@drawable/ic_my_location_black"
             app:backgroundTint="#ffffff"/>
 
 
@@ -48,7 +48,7 @@
                 android:layout_width="@dimen/search_bar_button_size"
                 android:layout_height="@dimen/search_bar_button_size"
                 android:id="@+id/menu_button"
-                android:src="@drawable/ic_menu"
+                android:src="@drawable/ic_menu_gray"
                 android:background="@drawable/rounded_corners_white"
                 android:contentDescription="@string/menu_button_description"/>
 
