--- a/android/app/src/main/res/menu/navigation_view.xml
+++ b/android/app/src/main/res/menu/navigation_view.xml
@@ -3,19 +3,19 @@
     <group android:checkableBehavior="none">
         <item
                 android:id="@+id/nav_available_area"
-                android:icon="@drawable/ic_available"
+                android:icon="@drawable/ic_available_black"
                 android:title="@string/nav_available_area_title"/>
         <item
                 android:id="@+id/nav_data"
-                android:icon="@drawable/ic_import_export"
+                android:icon="@drawable/ic_import_export_black"
                 android:title="@string/nav_data_title"/>
         <item
                 android:id="@+id/nav_about"
-                android:icon="@drawable/ic_about"
+                android:icon="@drawable/ic_about_black"
                 android:title="@string/nav_about_title"/>
         <item
                 android:id="@+id/nav_exit"
-                android:icon="@drawable/ic_exit"
+                android:icon="@drawable/ic_exit_black"
                 android:title="@string/nav_exit_title"/>
     </group>
 </menu>
