basic location behaviour

--- a/android/app/src/main/res/layout/activity_main_content.xml
+++ b/android/app/src/main/res/layout/activity_main_content.xml
@@ -16,18 +16,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="@dimen/fab_margin"
-            android:id="@+id/floating_directions_button"
+            android:id="@+id/directions_button"
             android:src="@drawable/ic_directions_black"
             app:backgroundTint="@color/colorPrimary"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_anchor="@id/floating_directions_button"
+            app:layout_anchor="@id/directions_button"
             app:layout_anchorGravity="top|center_horizontal"
             android:layout_gravity="center|top"
             app:useCompatPadding="true"
-            android:id="@+id/floating_location_button"
+            android:id="@+id/location_button"
             android:src="@drawable/ic_my_location_black"
             app:backgroundTint="#ffffff"/>
 
