--- a/android/app/src/main/res/layout/activity_available_area.xml
+++ b/android/app/src/main/res/layout/activity_available_area.xml
@@ -44,6 +44,14 @@
     </LinearLayout>
 
 
-
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="@dimen/fab_margin"
+            android:id="@+id/refresh_button"
+            android:src="@drawable/ic_refresh_black"
+            app:backgroundTint="#ffffff"/>
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
