--- a/android/app/src/main/res/layout/activity_main_content.xml
+++ b/android/app/src/main/res/layout/activity_main_content.xml
@@ -33,7 +33,7 @@
 
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,25 +41,42 @@
             android:layout_marginEnd="@dimen/search_bar_side_margin"
             android:layout_marginTop="@dimen/search_bar_top_margin"
             android:layout_gravity="top"
-
             android:background="@drawable/rounded_corners_white">
         <!--TODO: elevation-->
         <ImageButton
                 android:layout_width="@dimen/search_bar_button_size"
                 android:layout_height="@dimen/search_bar_button_size"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/menu_button"
                 android:src="@drawable/ic_menu_gray"
                 android:background="@drawable/rounded_corners_white"
                 android:contentDescription="@string/menu_button_description"/>
 
         <SearchView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                app:layout_constraintLeft_toRightOf="@id/menu_button"
+                app:layout_constraintRight_toLeftOf="@id/close_button"
                 android:id="@+id/search_view"
                 android:queryHint="@string/search_query_hint"
                 android:iconifiedByDefault="false"
                 android:focusable="false"/>
 
-    </LinearLayout>
+
+        <ImageButton
+                android:layout_width="@dimen/search_bar_button_size"
+                android:layout_height="@dimen/search_bar_button_size"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/close_button"
+                android:src="@drawable/ic_close_gray"
+                android:background="@drawable/rounded_corners_white"
+                android:visibility="gone"
+                android:contentDescription="@string/close_button_description"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
