appearance and interactions update

--- a/android/app/src/main/res/layout/activity_available_area.xml
+++ b/android/app/src/main/res/layout/activity_available_area.xml
@@ -21,9 +21,9 @@
             android:layout_marginStart="@dimen/search_bar_side_margin"
             android:layout_marginEnd="@dimen/search_bar_side_margin"
             android:layout_marginTop="@dimen/search_bar_top_margin"
+            android:elevation="5dp"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/rounded_corners_white">
-        <!--TODO: elevation-->
 
         <ImageButton
                 android:layout_width="@dimen/search_bar_button_size"
@@ -39,6 +39,7 @@
                 android:id="@+id/search_view"
                 android:queryHint="@string/search_query_hint"
                 android:iconifiedByDefault="false"
+                android:queryBackground="@color/white"
                 android:focusable="false"/>
 
     </LinearLayout>
