--- a/android/app/src/main/res/layout/activity_about.xml
+++ b/android/app/src/main/res/layout/activity_about.xml
@@ -14,9 +14,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            android:elevation="5dp"
             app:layout_constraintRight_toRightOf="parent"
             android:background="@color/colorPrimary">
-        <!--TODO elevation-->
 
     </androidx.appcompat.widget.Toolbar>
 
