--- a/android/app/src/main/res/menu/navigation_view.xml
+++ b/android/app/src/main/res/menu/navigation_view.xml
@@ -10,6 +10,10 @@
                 android:icon="@drawable/ic_import_export_black"
                 android:title="@string/nav_data_title"/>
         <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_settings_black"
+                android:title="@string/nav_settings_title"/>
+        <item
                 android:id="@+id/nav_about"
                 android:icon="@drawable/ic_about_black"
                 android:title="@string/nav_about_title"/>
