info panel style update

--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="info_text_margin">16dp</dimen>
     <dimen name="button_margin">8dp</dimen>
     <dimen name="default_margin">8dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
     <dimen name="routes_button_width">130dp</dimen>
     <dimen name="routes_button_height">35dp</dimen>
 
