--- a/android/app/src/main/res/layout/activity_main_content.xml
+++ b/android/app/src/main/res/layout/activity_main_content.xml
@@ -51,7 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="5dp"
-            android:background="@color/white"
+            android:background="@drawable/rounded_corners_white"
+            android:layout_margin="@dimen/small_margin"
             android:layout_gravity="bottom">
 
         <LinearLayout
@@ -91,6 +92,8 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 android:padding="16dp"
+                android:background="@drawable/rounded_corners_white"
+                android:layout_margin="@dimen/small_margin"
                 android:columnCount="2">
 
             <TextView
